src/test/ui/issues/issue-20605.stderr
error[E0277]: the size for values of type `dyn Iterator<Item = &'a mut u8>` cannot be known at compilation time
  --> $DIR/issue-20605.rs:2:17
   |
LL |     for item in *things { *item = 0 }
   |                 ^^^^^^^ expected an implementor of trait `IntoIterator`
   |
   = note: the trait bound `dyn Iterator<Item = &'a mut u8>: IntoIterator` is not satisfied
   = note: required because of the requirements on the impl of `IntoIterator` for `dyn Iterator<Item = &'a mut u8>`
note: required by `into_iter`
  --> $SRC_DIR/core/src/iter/traits/collect.rs:LL:COL
   |
LL |     fn into_iter(self) -> Self::IntoIter;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: consider mutably borrowing here
   |
LL |     for item in &mut *things { *item = 0 }
   |                 ++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
